[package]
name = "postgel-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
raunch = "1.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "io-std", "time", "process"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30.1", features = ["process", "signal"] }
